--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1263,5 +1263,11 @@
   "api.created": "Créée",
   "api.published": "Publiée",
   "api.deprecated": "Dépréciée",
-  "api.blocked": "Bloquée"
+  "api.blocked": "Bloquée",
+  "subscription.process.creation.title": "Création d'une étape de validation",
+  "subscription.process.type.selection": "Merci de sélectionner une type de validation",
+  "subscription.process.team.admin": "Admin. équipe",
+  "subscription.process.email": "Courriel",
+  "subscription.process.add.label": "Ajouter une nouvelle étape",
+  "Process": "Process"
 }
