--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1257,8 +1257,8 @@
   "third-party.payment.settings.delete.confirm.message": "Êtes-vous sûr de vouloir supprimer ces paramètres ?",
   "third-party.payment.settings.type.select.message": "Merci de selectionner un type de tiers de paiement à parametrer",
   "warning.missing.otoroshi": "Aucune instance Otoroshi configurée ou aucune entité configurée",
-  "plan.update.successful": "Le plan a été créé avec succès",
-  "plan.creation.successful": "Le plan a été mis à jour avec succès",
+  "plan.creation.successful": "Le plan a été créé avec succès",
+  "plan.update.successful": "Le plan a été mis à jour avec succès",
   "plan.payment.setup.successful": "Les paramètres de paiement du plan ont été mis à jour avec succès",
   "api.created": "Créée",
   "api.published": "Publiée",
