--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1256,17 +1256,15 @@
   "apiList.category.search":"Recherchez une categorie",
   "team.email.verification.send": "Mail envoyé à %s pour vérifier cette adresse email.",
   "team.email.alreadyVerified":"Cet email est déjà vérifié",
-  "team.email.notVerified":"Cliquez ici pour envoyer un email de validation",
+  "team.email.notVerified":"Envoyer un mail.",
   "mailValidation.sent.title":"Mail envoyé",
   "mailValidation.sent.body":"un mail a été envoyé pour valider cette nouvelle adresse email.",
   "team.validated.success": "Votre email a été vérifié",
-  "team.email.notVerified.info": "Votre email n'est pas vérifié. Envoyez un mail pour le vérifier ",
+  "team.email.notVerified.info": "Votre email n'est pas vérifié. Envoyez un mail pour le vérifier.",
   "here": "ici",
   "Success":"Succès",
   "mail.sent": "Mail envoyé !",
-  "team.notFound": "Equipe introuvable.",
   "token.missing": "Jeton manquant.",
   "token.notFound": "Jeton introuvable.",
-  "token.expired": "Ce jeton a expiré.",
-  "user.unauthorised": "Vous n'êtes pas autorisé à faire cette action."
+  "token.expired": "Ce jeton a expiré."
 }
