--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1239,6 +1239,7 @@
   "fastMode.help.text.2": "Les informations affichées sont succinctes afin de faciliter la récupération de clé d'API.",
   "fastMode.help.text.3": "Pour utiliser cette fonctionnalité, sélectionnez d'abord votre équipe.",
   "Yes": "Oui",
+  "No": "Non",
   "Filter": "Filtrer",
   "Filter data": "Filtrer les données",
   "Filter metadata": "Filtrer les métadonnées",
@@ -1271,8 +1272,9 @@
   "fastMode.onlySubs.info": "avec seulement les souscrites ",
   "fastMode.planSearch.info": "et les plans nommés comme",
   "api.delete.subscription": "Supprimer la souscription",
-  "api.delete.subscription.form": "Formulaire de suppression de la souscription",
-  "api.delete.subscription.howToDelete": "Tapez : \"%s\" pour supprimer la souscription.",
+  "api.delete.subscription.form.title": "Suppression d'une souscription",
+  "api.delete.subscription.message": "Vous êtes sur le point de supprimer la souscription de l'équipe %s pour le plan %s. cette action ne peut être annulée. Êtes-vous sûr de vouloir la supprimer ?",
+  "secret.refresh.confirm": "Vous êtes sur le point d'actualiser le secret de la souscription de l'équipe %s pour le plan %s. Cette action ne peut être annulée. Êtes vous sûr d'actualiser ce secret ?",
   "api.delete.subscription.deleted": "Souscription supprimée.",
   "api.delete.subscription.impossible.nothing": "Entrez le nom de la souscription pour la supprimer.",
   "api.delete.subscription.impossible.incorrect": "Le nom est faux.",
