--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -140,9 +140,9 @@
     "Request in progress": "Request in progress",
     "api not linked": "This API is not linked to an actual Otoroshi service yet",
     "Subscribe": "Subscribe",
-    "team.selection.title": "Select teams",
-    "team.selection.desc.get": "You are going to get one or more API keys. On which teams do you want them for?",
-    "team.selection.desc.request": "You are going to request one or more API keys. On which teams do you want them for?",
+    "team.selection.title": "Select team",
+    "team.selection.desc.get": "You are going to get an API key. For which team do you want it?",
+    "team.selection.desc.request": "You are going to request an API key. For which team do you want it?",
     "teamapi.select.title": "Select the team to view your API key(s)",
     "free.without.quotas.desc": "You'll pay nothing and do whatever you want :)",
     "free.with.quotas.desc": "You'll pay nothing but you'll have %s authorized requests per month",
