--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -143,9 +143,9 @@
   "Request in progress": "Demande en cours",
   "api not linked": "Cette API n'est pas encore liée à un service Otoroshi.",
   "Subscribe": "Souscrire",
-  "team.selection.title": "Sélectionner une ou des équipes",
-  "team.selection.desc.get": "Vous allez obtenir une ou plusieurs clés API. Pour quelles équipes les voulez-vous ?",
-  "team.selection.desc.request": "Vous allez demander une ou plusieurs clés API. Pour quelles équipes les voulez-vous ?",
+  "team.selection.title": "Sélectionner une équipe",
+  "team.selection.desc.get": "Vous allez obtenir une clé d'API. Pour quelle équipe la voulez-vous ?",
+  "team.selection.desc.request": "Vous allez demander une clé d'API. Pour quelle équipe voulez-vous effectuer cette demande ?",
   "teamapi.select.title": "Choisissez une équipe pour laquelle voir vos clés d'API",
   "free.without.quotas.desc": "Vous ne payez  rien et faites ce que vous voulez :)",
   "free.with.quotas.desc": "Vous ne payez rien mais vous n'avez que %s requêtes autorisées par mois",
