--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -544,6 +544,7 @@
     "Forgot your password ?": "Forgot your password?",
     "Api saved": "API saved",
     "api.created.success": "API %s created",
+    "group.created.success": "API group %s created",
     "oops, something went wrong.": "oops, something went wrong.",
     "personal.token.empty.error": "Your personal token can't be empty",
     "remove.user.success": "user %s is successfully deleted",
