--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -537,6 +537,7 @@
   "Forgot your password ?": "Mot de passe oublié ?",
   "Api saved": "API sauvegardée",
   "api.created.success": "API %s créée",
+  "group.created.success": "API groupe %s créée",
   "oops, something went wrong.": "Oups, quelque chose c'est mal passé.",
   "personal.token.empty.error": "Votre jeton perso. ne peut être vide",
   "remove.user.success": "l'utilisateur %s à été correctement supprimé",
