--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -490,7 +490,7 @@
         "p": "API keys"
     },
     "clean.archived.sub.confirm": "Are you sure you want to clean archived API keys?",
-    "See Stats": "See Stats",
+    "See Stats": "See stats",
     "clean archived apikeys": "clean archived API keys",
     "Copy credentials": "Copy credentials",
     "Credientials copied": "Credentials copied",
