--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1302,5 +1302,9 @@
   "subscription.process.team.admin": "Admin. équipe",
   "subscription.process.email": "Courriel",
   "subscription.process.add.label": "Ajouter une nouvelle étape",
-  "Process": "Process"
+  "Process": "Process",
+  "api.pricings.no.step.explanation": "Il semble qu'il n'y ait pas de processus de validation de la demande d'abonnement au processus",
+  "api.pricings.add.first.step.btn.label": "Ajouter une premiere étape de validation",
+  "api.documentation.clone.page.modal.title": "Clonage des pages de documentation",
+  "api.documentation.clone.page.placeholder": "Sélectionnez toutes les page a cloner"
 }
