--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1161,7 +1161,7 @@
   "Tags and categories": "Tags et catégories",
   "Consumptions": "Consommations",
   "team.transfer.notified": "L'équipe a été notifiée. merci d'attendre l'acceptation",
-  "new.owner": "Nouvelle équipe",
+  "new.owner": "Tapez le nom de la nouvelle équipe",
   "type.api.name.confirmation": "Veuillez saisir %s pour confirmer",
   "constraints.required.team": "L'équipe est requise",
   "constraints.type.api.name": "Veuillez saisir %s pour valider le transfert",
@@ -1284,5 +1284,12 @@
   "login.placeholder": "Courriel",
   "login.label": "Courriel",
   "password.label": "Mot de passe",
-  "login.btn.label": "Se connecter"
+  "login.btn.label": "Se connecter",
+  "api.delete.subscription": "Supprimer la souscription",
+  "api.delete.subscription.form": "Formulaire de suppression de la souscription",
+  "api.delete.subscription.howToDelete": "Tapez : \"%s\" pour supprimer la souscription.",
+  "api.delete.subscription.deleted": "Souscription supprimée.",
+  "api.delete.subscription.impossible.nothing": "Entrez le nom de la souscription pour la supprimer.",
+  "api.delete.subscription.impossible.incorrect": "Le nom est faux."
+
 }
