add a way to delete a apisub and tests

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1284,5 +1284,11 @@
     "login.placeholder": "Email adress",
     "login.label": "Email adress",
     "password.label": "Password",
-    "login.btn.label": "Login"
+    "login.btn.label": "Login",
+    "api.delete.subscription": "Delete subscription",
+    "api.delete.subscription.form": "Subscription deletion form",
+    "api.delete.subscription.howToDelete": "type : \"%s\" for deleting the subscription.",
+    "api.delete.subscription.deleted": "Subscription deleted.",
+    "api.delete.subscription.impossible.nothing": "Enter the name of the subscription for deleting it.",
+    "api.delete.subscription.impossible.incorrect": "The name is wrong."
 }
