--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1287,5 +1287,12 @@
   "login.placeholder": "Courriel",
   "login.label": "Courriel",
   "password.label": "Mot de passe",
-  "login.btn.label": "Se connecter"
+  "login.btn.label": "Se connecter",
+  "api.delete.subscription": "Supprimer la souscription",
+  "api.delete.subscription.form": "Formulaire de suppression de la souscription",
+  "api.delete.subscription.howToDelete": "Tapez : \"%s\" pour supprimer la souscription.",
+  "api.delete.subscription.deleted": "Souscription supprimée.",
+  "api.delete.subscription.impossible.nothing": "Entrez le nom de la souscription pour la supprimer.",
+  "api.delete.subscription.impossible.incorrect": "Le nom est faux."
+
 }
