sync usage with stripe - part II

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1142,7 +1142,7 @@
     "Otoroshi target": "Otoroshi target",
     "http.method": "HTTP method",
     "http.path": "Path",
-    "Edit API": "Edit API",
+    "api.configuration.btn.label": "Configure API",
     "create": "create",
     "search.placeholder": "Search for API, team and more...",
     "incorrect.email.or.password": "Incorrect email address and/or password",
@@ -1151,7 +1151,7 @@
     "Transfer": "Transfer",
     "delete.api.title": "Delete API",
     "delete.api.description": "Once you delete an API, there is no going back. Please be certain.",
-    "Edit APIs group": "Edit APIs group",
+    "apis.group.configuration.btn.label": "Configure APIs group",
     "contact.team": "Contact %s",
     "Issues": "Issues",
     "View this APIs Group": "View this APIs Group",
