--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1144,7 +1144,7 @@
   "cms.revisions.version_history": "Historique",
   "updated password can't be saved": "Le mots de passe n'a pu être mis à jour.",
   "incorrect password": "Mots de passe incorrect",
-  "Edit API": "Modifier l'API",
+  "api.configuration.btn.label": "Configurer l'API",
   "create": "Créer",
   "search.placeholder": "Rechercher une API, équipe, etc...",
   "incorrect.email.or.password": "Adresse e-mail et/ou mot de passe incorrects",
@@ -1153,7 +1153,7 @@
   "Transfer": "Transférer",
   "delete.api.title": "Supprimer l'API",
   "delete.api.description": "Une fois l'API supprimée, il n'y a pas de retour en arrière. Soyez sûr de vous.",
-  "Edit APIs group": "Modifier le groupe d'APIs",
+  "apis.group.configuration.btn.label": "Configurer le groupe d'APIs",
   "contact.team": "Contacter %s",
   "Issues": "Questions",
   "View this APIs Group": "Voir ce groupe d'APIs",
