--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -80,6 +80,7 @@
     "Change my password": "Change my password",
     "Reload personal token": "Reload personal token",
     "Set avatar from Gravatar": "Set avatar from Gravatar",
+    "Set avatar from auth. provider":"Set avatar from auth. provider",
     "Change your picture": "Change your picture",
     "Origins": "Origins",
     "delete account": "Are you sure you want to delete your account? This action cannot be undone ...",
@@ -362,8 +363,8 @@
     "Delete all sessions": "Delete all sessions",
     "Reload the table content": "Reload the table content",
     "importing ...": "importing ...",
-    "import state": "import state",
-    "download state": "download state",
+    "import state": "Import state",
+    "download state": "Download state",
     "Published": "Published",
     "View this api consumption": "View this API consumption",
     "Create a new API": "Create a new API",
@@ -791,7 +792,7 @@
     "consume.apikey": "Consume an API",
     "Mongo migration": "MongoDB to Postgres migration",
     "migration in progress ...": "migration in progress ...",
-    "migrate database": "migrate database",
+    "migrate database": "Migrate database",
     "Maintenance mode": "Maintenance mode",
     "Construction mode": "Construction mode",
     "Default mode": "Default mode",
