--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -83,6 +83,7 @@
   "Change my password": "Modifier mon mot de passe",
   "Reload personal token": "Recharger mon jeton perso.",
   "Set avatar from Gravatar": "Définir l'avatar depuis Gravatar",
+  "Set avatar from auth. provider": "Définir l'avatar depuis le fournisseur d'accès",
   "Change your picture": "Modifier mon avatar",
   "Origins": "Origines",
   "delete account": "Êtes vous sûr de vouloir supprimer votre compte ? Cette action ne peut être annulée...",
@@ -784,7 +785,7 @@
   "consume.apikey": "Consommer une API",
   "Mongo migration": "Migration de MongoDB vers Postgres",
   "migration in progress ...": "migration en cours ...",
-  "migrate database": "migrer la base",
+  "migrate database": "Migrer la base",
   "Maintenance mode": "En maintenance",
   "Construction mode": "En construction",
   "Default mode": "Par défaut",
@@ -869,7 +870,7 @@
   "issues.on_error": "Une erreur est survenue",
   "issues.on_missing_comment_content": "Un contenu est obligatoire pour publier un commentaire",
   "issues.opened_message": "a ouvert ce problème le",
-  "issues.comments": "commentaires",
+  "issues.comments": "commentaire(s)",
   "issues.actions": "Actions",
   "issues.delete_issue": "Supprimer ce problème",
   "issues.commented_on": "a commenté(e) le",
