--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1260,7 +1260,7 @@
   "apiList.category.search":"Recherchez une categorie",
   "team.email.verification.send": "Mail envoyé à %s pour vérifier cette adresse email.",
   "team.email.alreadyVerified":"Cet email est déjà vérifié",
-  "team.email.notVerified":"Envoyer un mail.",
+  "team.email.notVerified":"Envoyer un mail",
   "mailValidation.sent.title":"Mail envoyé",
   "mailValidation.sent.body":"un mail a été envoyé pour valider cette nouvelle adresse email.",
   "team.validated.success": "Votre email a été vérifié",
