--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1257,7 +1257,7 @@
   "otoroshi.missing.target": "Cible Otoroshi manquante",
   "otoroshi.missing.entities": "entités Otoroshi manquantes",
   "apiList.tag.search":"Recherchez un tag",
-  "apiList.category.search":"Recherchez une categorie",
+  "apiList.category.search":"Recherchez une catégorie",
   "team.email.verification.send": "Mail envoyé à %s pour vérifier cette adresse email.",
   "team.email.alreadyVerified":"Cet email est déjà vérifié",
   "team.email.notVerified":"Envoyer un mail",
