--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1252,7 +1252,7 @@
     "set.font.family": "font family",
     "select.team.placeholder": "Select a team",
     "otoroshi.missing.entities":"Missing Otoroshi entities",
-    "otoroshi.missing.target":"Missing otoroshi target",
+    "otoroshi.missing.target":"Missing Otoroshi target",
     "apiList.tag.search":"Search a tag",
     "apiList.category.search":"Search a category",
     "team.email.verification.send":"Mail sent to %s for verify this email address.",
