--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -287,6 +287,7 @@
     "tenant_edit.cms_history_length": "History length",
     "tenant_edit.cms_history_length.help": "The number of revisions kept in the database.",
     "tenant_edit.view_home_page": "View home page",
+    "tenant_edit.home_page.visibility": "Home page visibility",
     "Session max. age": "Session max. age",
     "Second": {
         "s": "Second",
