--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -991,6 +991,7 @@
   "tenant_edit.cms_history_length": "Longueur de l'historique",
   "tenant_edit.cms_history_length.help": "Nombre de modifications gardées en base",
   "tenant_edit.view_home_page": "Voir la page d'accueil",
+  "tenant_edit.home_page.visibility": "Visibilité de la page d'accueil",
   "Translation mode enabled": "Mode traduction activé",
   "Search translation": "Rechercher une traduction",
   "profile.security.oldPassword": "Ancien mot de passe",
