--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1317,5 +1317,7 @@
   "api.pricings.no.step.explanation": "Il semble qu'il n'y ait pas de processus de validation de la demande d'abonnement au processus",
   "api.pricings.add.first.step.btn.label": "Ajouter une premiere étape de validation",
   "api.documentation.clone.page.modal.title": "Clonage des pages de documentation",
-  "api.documentation.clone.page.placeholder": "Sélectionnez toutes les page a cloner"
+  "api.documentation.clone.page.placeholder": "Sélectionnez toutes les page a cloner",
+  "demand.delete.modal.message": "Voulez-vous vraiment supprimer cette demande de souscription ?",
+  "demand.delete.modal.title": "Suppression d'une demande de soucription"
 }
