handle usage plan deletion for third party payment - sync & close all third party subscriptions

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1014,8 +1014,8 @@
     "constraints.required.tag_name": "Name for a tag is required",
     "constraints.format.url": "%s must be a valid URL",
     "constraints.matches.email": "Your mail must be a valid email address",
-    "constraint.matches.password": "Your password must have 8 letters min with capital, number and special character (#$^+=!*()@%&)",
-    "constraint.oneof.confirm.password": "confirm and password must be equal",
+    "constraints.matches.password": "Your password must have 8 letters min with capital, number and special character (#$^+=!*()@%&)",
+    "constraints.oneof.confirm.password": "confirm and password must be equal",
     "constraints.test.password": "wrong password",
     "constraints.reserved.char.version": "Some characters are reserved for version (%s)",
     "constraints.file.type.forbidden": "File type is forbidden",
