--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1017,8 +1017,8 @@
   "constraints.required.tag_name": "Le nom du tag est requis",
   "constraints.format.url": "%s doit être une URL valide",
   "constraints.matches.email": "Votre courriel doit être une adresse électronique valide",
-  "constraint.matches.password": "Votre mot de passe doit avoir 8 lettres min. et contenir au moins une lettre capitale, un nombre et un caractère spécial (#$^+=!*()@%&).",
-  "constraint.oneof.confirm.password": "La confirmation du mot de passe doit être identique au mot de passe",
+  "constraints.matches.password": "Votre mot de passe doit avoir 8 lettres min. et contenir au moins une lettre capitale, un nombre et un caractère spécial (#$^+=!*()@%&).",
+  "constraints.oneof.confirm.password": "La confirmation du mot de passe doit être identique au mot de passe",
   "constraints.reserved.char.version": "Certains caractères sont reservés pour la version (%s)",
   "constraints.file.type.forbidden": "Le type du fichier est interdit",
   "constraints.file.type.required": "Le content-type du fichier est requis",
