--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1316,5 +1316,6 @@
     "api.documentation.clone.page.modal.title": "Cloning documentation pages",
     "api.documentation.clone.page.placeholder": "Select all pages to clone",
     "demand.delete.modal.message": "Are you sure you want to delete this subscription demand?",
-    "demand.delete.modal.title": "Deleting a subscription request"
+    "demand.delete.modal.title": "Deleting a subscription request",
+    "subscription.process.add.email.step.title": "Email process step setup"
 }
