--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1181,7 +1181,7 @@
     "Default mail template": "Default mail template",
     "Translate": "Translate",
     "Insert URL": "Insert URL",
-    "custom.metadata.process.change.to.manual": "set up subscriptionProcess to manual due to have a customMetadata",
+    "custom.metadata.process.change.to.manual": "Custom metadata has been configured. A validation step by administrator has been created to guarantee the verification of this information.",
     "subscription security": "subscription security",
     "subscription.security.help": "if enabled, personal teams will not be able to subscribed to an API",
     "API reference visibility": "API reference visibility",
