--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -779,7 +779,7 @@
   "API consumption": "Consommation d'API",
   "Subscriptions": "Souscriptions",
   "Plan consumption": "Consommation du plan",
-  "Income": "Revenu",
+  "Income": "Revenus",
   "Edition": "Edition",
   "Custom header": "Entête personnalisé",
   "api.custom.header.help": "Utiliser {{title}} pour insérer le nom de l'API, {{ description }} pour la petite description. Ajouter la classe \"btn-edit\" pour créer un lien vers la page d'édition de l'API",
@@ -1287,7 +1287,7 @@
   "login.placeholder": "Courriel",
   "login.label": "Courriel",
   "password.label": "Mot de passe",
-  "api_documentation_modal.import.title": "Choisissez une page de documentation à importer d'une autre verssion de cette API.",
+  "api_documentation_modal.import.title": "Choisissez une page de documentation à importer d'une autre version de cette API.",
   "issue.comments.number": " (%s) commentaires",
   "api.delete.subscription.form": "Formulaire de suppression de la souscription",
   "api.delete.subscription.howToDelete": "Tapez : \"%s\" pour supprimer la souscription.",
@@ -1299,7 +1299,7 @@
   "Payment": "Paiement",
   "third-party.payment.list.add.label": "Ajouter un tiers de paiement",
   "third-party.payment.settings.delete.confirm.message": "Êtes-vous sûr de vouloir supprimer ces paramètres ?",
-  "third-party.payment.settings.type.select.message": "Merci de selectionner un type de tiers de paiement à parametrer",
+  "third-party.payment.settings.type.select.message": "Merci de selectionner un type de tiers de paiement à paramétrer",
   "warning.missing.otoroshi": "Aucune instance Otoroshi configurée ou aucune entité configurée",
   "plan.creation.successful": "Le plan a été créé avec succès",
   "plan.update.successful": "Le plan a été mis à jour avec succès",
@@ -1309,7 +1309,7 @@
   "api.deprecated": "Dépréciée",
   "api.blocked": "Bloquée",
   "subscription.process.creation.title": "Création d'une étape de validation",
-  "subscription.process.type.selection": "Merci de sélectionner une type de validation",
+  "subscription.process.type.selection": "Merci de sélectionner un type de validation",
   "subscription.process.team.admin": "Admin. équipe",
   "subscription.process.email": "Courriel",
   "subscription.process.add.label": "Ajouter une nouvelle étape",
@@ -1317,7 +1317,7 @@
   "api.pricings.no.step.explanation": "Il semble qu'il n'y ait pas de processus de validation de la demande d'abonnement au processus",
   "api.pricings.add.first.step.btn.label": "Ajouter une premiere étape de validation",
   "api.documentation.clone.page.modal.title": "Clonage des pages de documentation",
-  "api.documentation.clone.page.placeholder": "Sélectionnez toutes les page a cloner",
+  "api.documentation.clone.page.placeholder": "Sélectionnez toutes les pages à cloner",
   "demand.delete.modal.message": "Voulez-vous vraiment supprimer cette demande de souscription ?",
   "demand.delete.modal.title": "Suppression d'une demande de soucription",
   "subscription.process.add.email.step.title": "Configuration de l'étape du processus par e-mail"
