--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -100,7 +100,7 @@
   "Default language": "Langue par défaut",
   "Untreated": "Non lues",
   "All notifications": "Toutes les notifications",
-  "no notification": "Vous avez 0 notification",
+  "no notification": "Vous avez 0 notifications",
   "more": "plus",
   "Ask access to API": "Demande d'accès à une API",
   "Ask to join a team": "Demande d'adhésion à une équipe",
@@ -303,7 +303,7 @@
   "Picture field name": "Champ image",
   "URL of the OIDC config": "URL de config. OIDC",
   "Get from OIDC config 2": "Récuperer depuis OIDC config 2",
-  "Use JSON payloads": "Utiliser un payloads JSON",
+  "Use JSON payloads": "Utiliser un payload JSON",
   "Read profile from JWT token": "Lire le profil depuis un token JWT",
   "Token scope": "Scope token",
   "Client Id": "Id client",
@@ -320,7 +320,7 @@
   "sha.size.help": "Taille de mot pour la fonction de hachage SHA-2 utilisée",
   "Hmac secret": "Secret Hmac",
   "hmac.secret.help": "Le secret Hmac",
-  "Public key": "Clé Publique",
+  "Public key": "Clé publique",
   "The RSA public key": "La clé RSA publique",
   "Private key": "Clé privée",
   "private.key.help": "La clé privée RSA peut être vide si elle n'est pas utilisée pour la signature de tokens JWT.",
