--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -457,7 +457,7 @@
     "Cost per req.": "Cost per req.",
     "Cost per request": "Cost per request",
     "delete.plan.confirm": "Are you sure you want to delete this plan?",
-    "add a new plan": "New plan",
+    "add a new plan": "Add plan",
     "import a plan": "Import a plan",
     "Make default plan": "Make default plan",
     "Make it private": "Make it private",
